styles/main.scss
@import "sass/utilities/initial-variables";

$info: rgb(38, 46, 66);
$primary: $blue;

@import 'bulma';
@import 'buefy/buefy';
@import 'fonts'; // font awesome

$navExtra: 5em;

nav.navbar {
	padding: 1em $navExtra;
}

.login-win {
	background-color: #fff;
	border-top-left-radius: 0.5em;
	border-top-right-radius: 0.5em;
	padding: 1em 2em;
}
.panel {
	background-color: #eee;
	padding: 1em 2em;
}

footer {
	width: 100%;
	background-color: #eee;
	padding: 1em 2em;
	font-size: 120%;
	text-align: center;
}

.container {
	padding: 2em 3em;
}

.item-img {
	height: 250px;
	width: 250px;
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
	margin: 1em auto;
}

.shop-item {
	overflow: hidden;
	p {
		font-size: 1.1em;
		border-top: 1px solid #eee;
		padding: 1em 0;
	}
	.button {
		width: 100% !important;
		border-radius:0;
	}
}

#itemModal .modal-content {
	width: 60%;
}

.hero {margin: 0 4em;}
.hero-container {
	background-size: contain;
}
#hero-1 {
	color: #fff;
	.hero-home {
		clip-path: polygon(0 0, 65% 0, 39% 100%, 0% 100%);
		background-color: rgba(40, 48, 69, 0.85);
	}
	background-image: url("/img/cover2.webp");
}
#hero-2 {
	background-color: $warning;
	padding: 0 !important;
	min-height: 30rem;
	color: #000;
}
.hero-home {
	// background-color: lighten($primary, 1%);
	.columns {
		margin:0 $navExtra;
		padding: 3em 0;
	}
	.heading {
		font-weight: 100;
		font-size: 2.5rem;
		-webkit-font-smoothing: antialised;
		text-transform: capitalize;
	}
}
.fade-enter-active, .fade-leave-active {
	transition: opacity .5s
  }
  .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
	opacity: 0
  }
  .light {
	  color: #777;
  }
nav > .dropdown-item {
	  padding-right: 0;
}

